# yaavg

./: .gitignore  CMakeLists.txt  config.h.cmake.in
src/: CMakeLists.txt  test_texture.c
src/bitmap/: CMakeLists.txt  bitmap.c  bitmap.h  bitmap_functionors_dict.h  bitmap_resource.c  bitmap_resource.h  bitmap_resource_functionors_dict.h  bitmap_to_png.c  bitmap_to_png.h  dummy_bitmap.c  dummy_bitmap_resource.c  png_bitmap.c  png_bitmap_resource.c  sdl_bitmap.c  sdl_bitmap_resource.c  test_bitmap.c  test_clip_bitmap.c  test_sdl_image.c  test_split_bitmap.c  tlg_bitmap_resource.c
src/common/: CMakeLists.txt  bithacks.h  cache.c  cache.h  cleanup_list.c  cleanup_list.h  debug.c  debug.h  debug_components.h  defs.h  dict.c  dict.h  exception.c  exception.h  exception_types.h  functionor.c  functionor.h  gen_static_dict.c  init_cleanup_list.c  init_cleanup_list.h  list.h  mm.c  mm.h  strhacks.h  test_cache.c  test_cleanup_list.c  test_debug.c  test_dict.c  test_exception2.c  test_init_cleanup_list.c  test_mm.c  test_static_dict.c  test_strdict.c
src/events/: CMakeLists.txt  phy_events.c  phy_events.h  sdl_events.c  sdl_events.h
src/io/: CMakeLists.txt  file_io.c  io.c  io.h  io_functionors_dict.h  test_io.c  test_xp3_io.c  xp3_io.c
src/math/: CMakeLists.txt  math.c  math.h  matrix.c  matrix.h  rect_mesh.c  rect_mesh.h  sqrt.h  test_math.c  trigon.c  trigon.h  vector.h
src/resource/: CMakeLists.txt  resource.c  resource.h  resource_proc.c  resource_proc.h  resource_types.c  resource_types.h  test_load_resource.c  test_resource.c  test_resource2.c  test_resource3.c  test_resource4.c
src/resources/: CMakeLists.txt  file_resources.c  resources.c  resources.h  resources_functionors_dict.h  test_resources.c
src/utils/: CMakeLists.txt  base_timer.c  generic_sdl.c  generic_sdl.h  rect.h  rect_mesh.c  rect_mesh.h  regexp.c  regexp.h  sdl_timer.c  test_rect_mesh.c  test_timer.c  timer.c  timer.h
src/video/: CMakeLists.txt  dummy_video.c  generic_opengl.c  generic_opengl.h  generic_sdl.c  generic_sdl.h  generic_sdl_video.c  generic_sdl_video.h  gl_driver.c  gl_driver.h  glx_gl_driver.c  opengl.h  opengl3_video.c  opengl_texture.c  opengl_texture.h  opengl_video.c  sdl_gl_driver.c  sdl_video.c  test_video.c  test_video_exception.c  test_video_timer.c  video.c  video.h
src/video/dynamic_opengl/: CMakeLists.txt  dynamic_opengl.c  dynamic_opengl.h  glx_funcs.c  glx_funcs.h  glx_funcs_list.h  opengl3_funcs.c  opengl3_funcs.h  opengl3_funcs_list.h  opengl_funcs.c  opengl_funcs.h  opengl_funcs_list.h
src/yconf/: CMakeLists.txt  test_yconf.c  yconf.c  yconf.h
test/: test_vmsplice.c
ver1/src/econfig/: econfig.c
ver1/src/video/: video_gl.c
